# quorum

./: .gitignore  README.md  conftest.py  docker-compose.yml
services/ai-brain/: Dockerfile  daily_summary.py  heartbeat.py  live_watch_worker.py  main.py  pre_market.py  requirements.txt  theses_workers.py
services/ai-brain/agents/: grok.py  haiku.py  opus.py
services/analyzer/: Dockerfile  alerts_evaluator.py  main.py  requirements.txt
services/analyzer/indicators/: fundamental.py  scoring.py  technical.py
services/dashboard/backend/: chat.py  chat_tools.py  main.py  plugin_alerts.py  plugin_analytics.py  plugin_anomalies.py  plugin_campaign_mgmt.py  (+12 more)
services/data-collector/: Dockerfile  main.py  requirements.txt
services/notifier/: Dockerfile  chat_client.py  formatter.py  main.py  requirements.txt
services/sentiment/: Dockerfile  main.py  requirements.txt
shared/: account_manager.py  config.py  db_init.py  dynamic_sizing.py  market_hours.py  position_manager.py  pyproject.toml  range_bias.py  redis_streams.py  sizing.py  trade_snapshot.py
shared/models/: __init__.py  account.py  alerts.py  base.py  campaigns.py  facts.py  knowledge.py  macro.py  ohlcv.py  positions.py  sentiment.py  shipping.py  signals.py
shared/schemas/: __init__.py  events.py
tests/ai-brain/: test_grok.py  test_haiku.py  test_opus.py
tests/data-collector/: conftest.py  test_alpha_vantage.py  test_cot.py  test_eia.py  test_fred.py  test_jodi.py  test_opec.py  test_shipping.py  test_yahoo.py
tests/notifier/: test_formatter.py
tests/sentiment/: test_rss.py  test_twitter.py
(+42 files in other folders)
