[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared models, schemas, and helpers for the trading bot"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
